@@ -1,39 +1,41 @@
 package me.niteshh.redcake.command.commands;
 
-import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import me.niteshh.redcake.command.RedCakeCommand;
 import me.niteshh.redcake.resp.ErrorValue;
 import me.niteshh.redcake.resp.IntegerValue;
 import me.niteshh.redcake.resp.RespValue;
+import me.niteshh.redcake.store.InvalidIntegerException;
 import me.niteshh.redcake.store.KeyValueStore;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 
 @Component
-@AllArgsConstructor
-public class TtlCommand implements RedCakeCommand {
+@RequiredArgsConstructor
+public class IncrCommand implements RedCakeCommand {
 
     private final KeyValueStore store;
 
     @Override
     public String name() {
-        return "TTL";
+        return "INCR";
     }
 
     @Override
     public RespValue execute(List<String> arguments) {
 
         if (arguments.size() != 1) {
-            return new ErrorValue(
-                    "wrong number of arguments for 'ttl' command"
-            );
+            return new ErrorValue("wrong number of arguments for 'incr' command");
         }
 
-        String key = arguments.get(0);
+        String key = arguments.getFirst();
 
-        return new IntegerValue(
-                store.ttl(key)
-        );
+        try {
+            long value = store.increment(key, 1);
+            return new IntegerValue(value);
+        } catch (InvalidIntegerException e) {
+            return new ErrorValue(e.getMessage());
+        }
     }
 }
